// Copyright 2024 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.coderef;
option go_package = "github.com/bucketeer-io/bucketeer/proto/coderef";

import "proto/coderef/code_reference.proto";

message CreateCodeReferenceCommand {
  string feature_id = 1;
  string file_path = 2;
  int32 line_number = 3;
  string code_snippet = 4;
  string content_hash = 5;
  repeated string aliases = 6;
  string repository_name = 7;
  string repository_owner = 8;
  CodeReference.RepositoryType repository_type = 9;
  string repository_branch = 10;
  string commit_hash = 11;
  string environment_id = 12;
}

message UpdateCodeReferenceCommand {
  string id = 1;
  string file_path = 2;
  int32 line_number = 3;
  string code_snippet = 4;
  string content_hash = 5;
  repeated string aliases = 6;
  string repository_branch = 7;
  string commit_hash = 8;
}

message DeleteCodeReferenceCommand {
  string id = 1;
  string environment_id = 2;
}